src/objects/RWE_Partnership__c.object
<CustomObject>
    <description>This is object is used to track and manage partnerships</description>
    <fields>
        <fullName>Comments__c</fullName>
        <description>This field is to capture the comments specific to the Partnership</description>
        <label>Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Partnership End Date</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <label>Partner Type</label>
        <picklist>
            <picklistValues>
                <fullName>Academic Medical Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultancy Firm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Entity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare IT/ Informatics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrated Health System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Advocacy Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharma Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Network</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partnership_Lead__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Partnership Lead</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>RWE Partnerships</relationshipLabel>
        <relationshipName>RWE_Partnerships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partnership_Sponsor__c</fullName>
        <label>Partnership Sponsor</label>
        <picklist>
            <picklistValues>
                <fullName>Clinical Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drug Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RWE</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partnership_Status__c</fullName>
        <label>Partnership Status</label>
        <picklist>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archived</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deleted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluated and Not Pursued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global [Multiple Regions]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unspecified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Partnership Start Date</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>RWE Partnership</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>RWE Partner</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RWE Partnerships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>